# cookiecutter-faststream

./: README.md
{{cookiecutter.project_slug}}/: Containerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: lint.sh  services.yml  start_{{cookiecutter.streaming_service}}_broker_locally.sh  static-analysis.sh  stop_{{cookiecutter.streaming_service}}_broker_locally.sh
